# SignDetectionSystemCIS4398

./: #contourdrawing.cpp#  .gitignore  CMakeLists.txt  Doxyfile  Frame.cpp  Frame.h  FrameSendTest.cpp  FrameSender.cpp  FrameSender.h  Makefile  Master.cpp  Master.h  Passable.h  README.txt  SHA256.h  SHACommon.h  contourdrawing.cpp  detectRect.cpp  main.cpp  single_node.c
cpp/: #main.cpp#  Analyzer.cpp  Analyzer.h  CMakeLists.txt  Config.ini  Makefile  Master.cpp  Master.h  Preprocessor.cpp  Preprocessor.h  Renderer.cpp  Renderer.cpp~  Renderer.h  SignDetection.h  SysInfo.cpp  SysInfo.h  main.cpp  main_TODO.cpp  qTest.cpp
cpp/demo/: read_from_camera.cpp  read_from_video.cpp
cpp/headers/: FrameStructs.h  OpenCVHeaders.h
cpp/queue/: test
cpp/queue/headers/: GeneralHeaders.h  SignDetectionQueue.h  consumer.h
cpp/sd_SpeedLimitDetection/: CMakeLists.txt  speedlimit_modifiedShapeDetection.h  whiteDetection.cpp  whiteDetection.h
cpp/sd_StopSignDetection/: CMakeLists.txt  modifiedShapeDetection.h  objectDetection.cpp  redDetection.cpp  redDetection.h
cpp/sd_common/: CMakeLists.txt  Colors.h  ConfigParser.cpp  ConfigParser.h  Frame.cpp  Frame.h  FrameResult.cpp  FrameResult.cpp~  FrameResult.h  Log.cpp  Log.h  NodeID.h  Region.cpp  Region.h  SafeQueue.h  Shapes.h  SignType.h
cpp/sd_contour/: CMakeLists.txt  Contour.h  contour.cpp  contour.cpp~  contourdrawing.cpp  contourdrawing.cpp~  contours.cpp~  main.cpp  main.cpp~
cpp/sd_detect_triangles/: CMakeLists.txt  detect_triangles.cpp  detect_triangles.cpp~
cpp/sd_input/: CMakeLists.txt  main.cpp  open_image.cpp  read_from_camera.cpp  read_from_video.cpp
cpp/sd_input/headers/: FrameDemo.h
cpp/sd_input_TODO/: CMakeLists.txt  FrameDemo.h  main.cpp  readcamera.cpp  readimage.cpp  readimage.cpp~
cpp/sd_pack_TODO/: pack_region.cpp  pack_region.h
cpp/sd_render/: Render.h  render.cpp  render.cpp~
cpp/sd_shapedetection/: ShapeDetection.h  shapedetection.cpp  shapedetection.cpp~
cpp/sd_textdetection/: CMakeLists.txt  textsample.cpp~
cpp/sd_textextraction/: CMakeLists.txt  TextExtractor.cpp  TextExtractor.h
cpp/sd_textextraction/tests/: CMakeLists.txt  text-test.cpp
cpp/tests/: ConfigFileTest.cpp  FrameSendTest.cpp  ShapeDetectionTest.cpp  TestCPU.cpp  config.ini  make_config_test.sh  make_shape_test.sh
sd_common/: Node.h  SHA256.c
